--- a/docs/test-functions.ipynb
+++ b/docs/test-functions.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List all available datasets\n"
+    "# Workflow and Pipeline with PyCaret\n",
+    "\n",
+    "First you see some examples for the basic workflow. After that you see an example of the convenience workflow function that is implemented through `create_regression_model`, which basically implements all the beforementioned steps in a single collection in form of a function, say Pipeline.\n",
+    "\n",
+    "## List all available datasets\n"
    ]
   },
   {
@@ -379,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic workflow\n"
+    "## Basic workflow\n"
    ]
   },
   {
@@ -562,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compare Models\n"
+    "### Compare Models\n"
    ]
   },
   {
@@ -815,7 +819,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tune best model (Optimization of Hyperparameters)\n"
+    "### Tune best model (Optimization of Hyperparameters)\n"
    ]
   },
   {
@@ -1361,7 +1365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Enemble best models\n"
+    "### Enemble best models\n"
    ]
   },
   {
@@ -1756,7 +1760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Blend Models\n"
+    "### Blend Models\n"
    ]
   },
   {
@@ -1989,7 +1993,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stack models\n"
+    "### Stack models\n"
    ]
   },
   {
@@ -2463,7 +2467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get Best Model (`AutoML`)\n"
+    "### Get Best Model (`AutoML`)\n"
    ]
   },
   {
@@ -2535,9 +2539,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Check model types\n",
+    "### Check model types\n",
     "\n",
-    "check what type of models are returned\n"
+    "Check what type of models are returned:\n"
    ]
   },
   {
@@ -2565,7 +2569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convenience workflow from `fhdw.modelling`\n",
+    "## Convenience workflow from `fhdw.modelling`\n",
     "\n",
     "in the follownig you find a setup with the convenience workflow:\n"
    ]
@@ -2595,7 +2599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make Predictions from MLFlow\n"
+    "## Make Predictions from MLFlow\n"
    ]
   },
   {
@@ -2663,7 +2667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation: Plot Model\n",
+    "## Evaluation: Plot Model\n",
     "\n",
     "Available plots:\n",
     "\n",
@@ -2788,7 +2792,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plots for specific learning method\n"
+    "### Plots for specific learning method\n",
+    "\n",
+    "Not all Plots are supported for each method. For example, _Feature Importance Plots_ are not available for an `sklearn.LinearRegression` model.\n"
    ]
   },
   {
